js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-with-expression-empty-str-is-valid-assign-expr.js
with
(
import
(
'
'
)
)
{
assert
.
sameValue
(
then
Promise
.
prototype
.
then
)
;
assert
.
sameValue
(
constructor
Promise
)
;
}
reportCompare
(
0
0
)
;
