js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/top-level-not-extensible-args.js
DONOTEVALUATE
(
)
;
import
(
'
.
/
empty_FIXTURE
.
js
'
{
}
'
'
)
;
